--- a/src/components/home-page/Home.css
+++ b/src/components/home-page/Home.css
@@ -59,29 +59,49 @@ header {
     font-weight: 300;
     font-size: 36px;
     line-height: 32px;
-
-    
+    padding-left: 10rem;
 }
 
-.list-items{
+.list-items {
     display: flex;
     align-items: center;
 }
 
-.search-btn{
+.search-btn {
     margin-left: 60px;
 }
 
 .like-btn,
-.basket-btn{
+.basket-btn {
     margin-left: 28px;
 }
 
 .wall-paper-main {
-    position: absolute;
-    z-index: 10;
+    display: flex;
+    justify-content: center;
 
-    background-image: url("../../assets/wallpaper-main.png");
+    position: relative;
     width: 100%;
-    height: 1080px;
+    /*height: 1080px;*/
+}
+
+.wall-paper-image{
+    width: 100%;
+    position: relative;
+    /*z-index: 10;*/
+}
+
+.center-picture {
+    position: absolute;
+    z-index: 11;
+    top: 9rem;
+    height: 74%;
+    display: flex;
+    /*margin-top: 4.5rem;*/
+    /* padding: 138px 250px; */
+    justify-content: center;
+}
+
+.center-image{
+    width: 100%;
 }
