--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -7,6 +7,14 @@
 
 }
 
+.container{
+    max-width: 1920px; /*максимальная ширина или столько сколько есть места(задаем для адаптива)*/
+    margin: 0 auto; /*по центру*/
+    padding: 0 80px; /* не по плану*/
+
+    border: orange solid 1px;
+}
+
 header {
     width: 100%;
     position: absolute;
