--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -101,41 +101,41 @@
 /*    margin-left: 60px;*/
 /*}*/
 
-.like-btn,
-.basket-btn {
-    margin-left: 28px;
-}
+/*.like-btn,*/
+/*.basket-btn {*/
+/*    margin-left: 28px;*/
+/*}*/
 
-.wall-paper-main {
-    display: flex;
-    justify-content: center;
+/*.wall-paper-main {*/
+/*    display: flex;*/
+/*    justify-content: center;*/
 
-    position: relative;
-    width: 100%;
-    /*height: 1080px;*/
-}
+/*    position: relative;*/
+/*    width: 100%;*/
+/*    !*height: 1080px;*!*/
+/*}*/
 
-.wall-paper-image {
-    width: 100%;
-    position: relative;
-    /*z-index: 10;*/
-}
+/*.wall-paper-image {*/
+/*    width: 100%;*/
+/*    position: relative;*/
+/*    !*z-index: 10;*!*/
+/*}*/
 
-.center-picture {
-    position: absolute;
-    z-index: 11;
-    display: flex;
-    padding: 8rem 20rem 100px;
-    justify-content: center;
-    top: 1rem;
-    align-items: flex-end;
+/*.center-picture {*/
+/*    position: absolute;*/
+/*    z-index: 11;*/
+/*    display: flex;*/
+/*    padding: 8rem 20rem 100px;*/
+/*    justify-content: center;*/
+/*    top: 1rem;*/
+/*    align-items: flex-end;*/
 
-    width: 100%;
-}
+/*    width: 100%;*/
+/*}*/
 
-.center-image {
-    width: 100%;
-}
+/*.center-image {*/
+/*    width: 100%;*/
+/*}*/
 
 .bottom-panel {
     position: absolute;
@@ -164,10 +164,10 @@
     align-items: center;
 }
 
-.picture-title {
-    font-family: 'harmondextra_bold_expanded';
-    font-weight: 800;
-    font-size: 60px;
-    color: #FBFBFB;
-}
+/*.picture-title {*/
+/*    font-family: 'harmondextra_bold_expanded';*/
+/*    font-weight: 800;*/
+/*    font-size: 60px;*/
+/*    color: #FBFBFB;*/
+/*}*/
 
