--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,149 +1,13 @@
-/*@font-face {*/
-/*    font-family: 'harmondextra_bold_expanded';*/
-/*    src: url('../../../public/fonts/harmond-extraboldexpanded-webfont.woff2') format('woff2'),*/
-/*    url('../../../public/fonts/harmond-extraboldexpanded-webfont.woff') format('woff');*/
-/*    font-weight: normal;*/
-/*    font-style: normal;*/
-/*}*/
-
-/*@font-face {*/
-/*    font-family: 'harmondextra_bold_expanded';*/
-/*    src: url('/fonts/harmond-extraboldexpanded-webfont.woff2') format('woff2'),*/
-/*    url('/fonts/harmond-extraboldexpanded-webfont.woff') format('woff');*/
-/*    font-weight: normal;*/
-/*    font-style: normal;*/
-/*}*/
-
-/*@font-face {*/
-/*    font-family: "harmondextra_bold_expanded";*/
-/*    src: url(../public/fonts/harmond-extraboldexpanded-webfont.woff2);*/
-/*    font-display: swap;*/
-/*}*/
-
-/*.container{*/
-/*    max-width: 1920px; !*максимальная ширина или столько сколько есть места(задаем для адаптива)*!*/
-/*    margin: 0 auto; !*по центру*!*/
-/*    padding: 0 80px; !* не по плану*!*/
-
-/*    border: orange solid 1px;*/
-/*}*/
-
-/*header {*/
-/*    width: 100%;*/
-/*    position: absolute;*/
-/*    z-index: 20;*/
-
-/*    color: #ffffff;*/
-/*}*/
-
-/*.nav {*/
-/*    display: flex;*/
-/*    justify-content: space-between;*/
-/*    align-items: center;*/
-/*    flex-grow: 1; !*сдвинули к центру logo/phone*!*/
-/*    flex-basis: 0; !*сдвинули к центру logo/phone*!*/
-
-/*    text-transform: uppercase;*/
-/*    padding: 34px 0;*/
-/*}*/
-
-/*.language-toggle {*/
-/*    display: flex;*/
-/*    align-items: flex-end;*/
-/*    font-family: 'Libre Franklin', sans-serif;*/
-/*}*/
-
-/*.ellipse {*/
-/*    width: 5px;*/
-/*    height: 5px;*/
-/*    border-radius: 50%;*/
-/*    margin: 0 auto;*/
-/*    background-color: #ffffff;*/
-/*    margin-bottom: 6px;*/
-/*}*/
-
-/*.language-item {*/
-/*    cursor: pointer;*/
-/*}*/
-
-/*.language-active {*/
-/*    font-weight: 700;*/
-/*    font-size: 16px;*/
-/*    line-height: 24px;*/
-/*}*/
-
-/*.language,*/
-/*.login-btn {*/
-/*    font-weight: 500;*/
-/*    font-size: 16px;*/
-/*    line-height: 24px;*/
-/*    color: #ffffff;*/
-/*}*/
-
-/*.language-item:nth-child(2) {*/
-/*    margin-left: 24px;*/
-/*}*/
-
-/*.logo {*/
-/*    font-family: 'Rany', sans-serif;*/
-/*    font-weight: 300;*/
-/*    font-size: 36px;*/
-/*    line-height: 32px;*/
-/*    padding-left: 10rem;*/
-/*}*/
-
-/*.list-items {*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*}*/
-
-/*.search-btn {*/
-/*    margin-left: 60px;*/
-/*}*/
-
-/*.like-btn,*/
-/*.basket-btn {*/
-/*    margin-left: 28px;*/
-/*}*/
-
-/*.wall-paper-main {*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-
-/*    position: relative;*/
-/*    width: 100%;*/
-/*    !*height: 1080px;*!*/
-/*}*/
-
-/*.wall-paper-image {*/
-/*    width: 100%;*/
-/*    position: relative;*/
-/*    !*z-index: 10;*!*/
-/*}*/
-
-/*.center-picture {*/
-/*    position: absolute;*/
-/*    z-index: 11;*/
-/*    display: flex;*/
-/*    padding: 8rem 20rem 100px;*/
-/*    justify-content: center;*/
-/*    top: 1rem;*/
-/*    align-items: flex-end;*/
-
-/*    width: 100%;*/
-/*}*/
-
-/*.center-image {*/
-/*    width: 100%;*/
-/*}*/
-
 .bottom-panel {
     position: absolute;
     z-index: 12;
+    margin-bottom: 9px;
 }
 
 .btn-panel {
     display: flex;
+    position: absolute;
+    margin-bottom: 129px;
 }
 
 .btn-explore,
@@ -163,11 +27,4 @@
     justify-content: center;
     align-items: center;
 }
-
-/*.picture-title {*/
-/*    font-family: 'harmondextra_bold_expanded';*/
-/*    font-weight: 800;*/
-/*    font-size: 60px;*/
-/*    color: #FBFBFB;*/
-/*}*/
 
