--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: gray;
+  /*background-color: gray;*/
 }
 
 code {
@@ -27,11 +27,3 @@ a{
   text-decoration: none;
   color:#333;
 }
-
-/*.container{*/
-/*  max-width: 1920px; !*максимальная ширина или столько сколько есть места(задаем для адаптива)*!*/
-/*  margin: 0 auto; !*по центру*!*/
-/*  padding: 0 80px; !* не по плану*!*/
-
-/*  border: orange solid 1px;*/
-/*}*/
