--- a/src/components/CollectionMain/CollectionMain.css
+++ b/src/components/CollectionMain/CollectionMain.css
@@ -1,33 +1,58 @@
+.wrapper-main{
+    margin-top: 130px;
+
+}
+
+.collection-title {
+    border: solid 1px red;
+    width: 41%;
+
+    position: absolute;
+    right: 80px;
+}
+
+.collection-title h2 {
+    font-family: 'Harmond';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 40px;
+    line-height: 47px;
+
+    color: #163F2B;
+}
+
 .collections-main {
     display: flex;
     flex-wrap: wrap-reverse;
     align-content: flex-start;
     justify-content: space-between;
 
-    margin-top: 130px;
+    /*margin-top: 130px;*/
     /*height: 2658px;*/
     /*position: relative;*/
 }
 
+.test-image{
+
+}
+
 .collection-cart {
-    cursor: none;
+    /*cursor: none;*/
     border: solid 1px rebeccapurple;
 
-    /*cursor: url("/public/assets/images/cursor.png"), auto;*/
-
     /*height: 900px;*/
-    height: 686px;
-    /*height: 524px;*/
     /*width: 815px;*/
     width: 46%;
 
     position: relative;
+
 }
 
 .test{
     box-sizing: border-box;
 
     position: absolute;
+    z-index: 2;
     width: 17px;
     height: 17px;
     left: 555px;
@@ -46,21 +71,6 @@
     width: 100%;
 }
 
-.collection-title {
-    border: solid 1px red;
-    height: 190px;
-}
-
-.collection-title h2 {
-    font-family: 'Harmond';
-    font-style: normal;
-    font-weight: 800;
-    font-size: 40px;
-    line-height: 47px;
-
-    color: #163F2B;
-}
-
 .collection_description {
     font-family: 'Libre Franklin', sans-serif;
     font-style: normal;
@@ -72,7 +82,7 @@
 }
 
 .see-collection{
-    border: solid 1px cornflowerblue;
+    display: none;
 
     font-family: 'Libre Franklin', sans-serif;
     font-style: normal;
@@ -87,12 +97,17 @@
 
     position: absolute;
     bottom:86px;
-    width: 100%;
+    width: 90%;
     padding: 23px 0;
 
     background: rgba(36, 41, 52, 0.25);
     background-blend-mode: overlay, normal;
     backdrop-filter: blur(15px);
+}
+
+.wrapper-btn{
+    display: flex;
+    justify-content: center;
 }
 
 .name-collection {
@@ -107,12 +122,17 @@
     color: #163F2B;
 }
 
+.collection-cart:hover .see-collection{
+display: block;
+}
+
 .collections-main .collection-cart:nth-child(2){
    margin-bottom: 880px;
 }
 
 .collections-main .collection-cart:nth-child(1){
-    margin:  280px 0;
+    margin:  280px 0 ;
+    height: 100%;
 }
 
 .collections-main .collection-cart:nth-child(4){
