--- a/src/pages/Collection/Collection.css
+++ b/src/pages/Collection/Collection.css
@@ -1,6 +1,4 @@
 .main-wallpaper {
-    /*position: relative;*/
-    /*width: 1920px;*/
     height: 666px;
     display: flex;
     justify-content: center;
@@ -29,7 +27,7 @@
 
 .content {
     position: absolute;
-    width: 40%;
+    width: 46%;
     height: 108px;
     margin-top: 8rem;
 
@@ -40,4 +38,32 @@
     line-height: 36px;
 
     color: #FBFBFB;
+}
+
+.show-path{
+    display: flex;
+    justify-content: space-evenly;
+    position: absolute;
+    width: 203px;
+    height: 24px;
+    left: 80px;
+    top: 599px;
+
+    font-family: 'Libre Franklin';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 24px;
+
+    color: #FBFBFB;
+}
+
+.collection-select{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 121px;
+}
+
+.collection-cards{
+    margin-top: 80px;
 }
