--- a/src/pages/Collection/Collection.css
+++ b/src/pages/Collection/Collection.css
@@ -65,37 +65,9 @@
 }
 
 .collection-cards{
-    margin-top: 80px;
-}
+    margin: 80px 0 117px 0;
 
-.rating{
     display: flex;
-    margin-top: 24px;
-}
-.rating-count{
-    margin-left: 10px;
-    color:#163F2B;
-}
-
-.title-collection{
-    font-family: 'Libre Franklin';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 28px;
-    line-height: 36px;
-    letter-spacing: 0.03em;
-
-    color: #163F2B;
-    margin-top: 24px;
-}
-
-.price-collection{
-    font-family: 'Libre Franklin';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-
-    color: #163F2B;
-    margin-top: 30px;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
